test/modules/errors/args.js
const deps = [ 'a', 'b' ];

function init( a ) {
  return {
    name: 'args',
    a
  };
}

module.exports = { deps, init };
